[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
core-lib = { path = "../core"}
async-trait = "0.1.88"
tokio = { version = "1.44.2", features = ["full"] }
chrono = "0.4.40"
redis = { version = "0.30.0", features = ["tls-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
hex-literal = "0.4.1"

[dev-dependencies]
hex-literal = "0.4.1"


